# cbp-vet

./: .gitignore  PROJECT_STATE.md  README.md  pyproject.toml
configs/: env-w0.txt  requirements-freeze.txt
docs/: abstract.md
docs/abstract/: Abstract_submitted_2026-07-10.md
experiments/: 00_ingest_toi1338.py  00_ingest_toi1338_report.md  01_download_lightcurves.py  02_randomized_profile_bank.py  03_pull_goodsn_pilot.py  04_elc_retarget_220567625.py  05_goodsn_inventory.py
