[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cbp-vet"
version = "0.0.1"
description = "Machine-learning vetting benchmark for circumbinary-planet transit candidates in TESS eclipsing-binary light curves."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Wilson Wu" }]
dependencies = [
  "mono-cbp==0.1.9",
  "numpy",
  "pandas",
  "lightkurve",
  "scikit-learn",
]

[tool.setuptools.packages.find]
include = ["cbpvet*"]
